k8s/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener-api
  labels:
    app: url-shortener-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: url-shortener-api
  template:
    metadata:
      labels:
        app: url-shortener-api
    spec:
      containers:
        - name: api
          image: lokesh3721/url-shortner-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          command: ["./app"]
          args:
            - "--port=$(APP_PORT)"
            - "--env=$(APP_ENV)"
            - "--db-dsn=$(DB_USER):$(DB_PASS)@tcp($(DB_HOST):$(DB_PORT))/$(DB_NAME)?parseTime=true"
            - "--db-max-open-conns=$(DB_MAX_OPEN_CONNS)"
            - "--db-max-idle-conns=$(DB_MAX_IDLE_CONNS)"
            - "--db-max-idle-time=$(DB_MAX_IDLE_TIME)"
            - "--db-max-life-time=$(DB_MAX_LIFE_TIME)"
            - "--limiter-rps=$(LIMITER_RPS)"
            - "--limiter-burst=$(LIMITER_BURST)"
            - "--limiter-enabled=$(LIMITER_ENABLED)"
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
